sidebar and persist

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,14 +1,15 @@
 .side {
-  min-width: 260px;
+  width: 260px;
   background-color: rgb(var(--background-sidebar));
   height: 100vh;
   z-index: 100;
   transition: left 200ms ease-in-out;
-  padding: 24px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .svg_logo {
@@ -16,8 +17,10 @@
 }
 
 .logo_link {
+  margin-left: 24px;
   display: flex;
   gap: 8px;
+  font-size: 16px;
   align-items: center;
   color: rgb(var(--text-color-sidebar-and-header));
   font-weight: 600;
@@ -34,8 +37,9 @@
 }
 
 .under_logo {
+  padding-left: 24px;
   margin: 60px 0 8px 0;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   color: rgb(var(--text-color-sidebar-and-header), 0.5);
 }
@@ -48,12 +52,16 @@
   margin: 0;
 }
 
+.create_top_container {
+  padding: 0 24px 0 24px;
+}
+
 .create_container {
   cursor: pointer;
   display: flex;
+  align-items: center;
   gap: 96px;
-  padding-top: 14px;
-  padding-bottom: 14px;
+  padding: 14px 0 14px 0;
   border-top: 1px solid rgb(var(--text-color-sidebar-and-header), 0.1);
   border-bottom: 1px solid rgb(var(--text-color-sidebar-and-header), 0.1);
   transition: background-color 200ms ease-in-out;
@@ -86,8 +94,9 @@
 
 .board_list {
   margin-top: 40px;
+  margin-bottom: 40px;
   overflow: auto;
-  height: 300px;
+  height: 270px;
 }
 
 .board_list::-webkit-scrollbar {
@@ -95,11 +104,10 @@
 }
 
 .board_item {
-  padding-top: 20px;
 }
 
-.board_item {
-  padding-bottom: 20px;
+.board_item:hover {
+  background-color: rgb(var(--background-hover-board));
 }
 
 .board_title_container {
@@ -108,6 +116,8 @@
   align-items: center;
   span {
     color: rgb(var(--text-color-sidebar-and-header), 0.5);
+    font-size: 14px;
+    font-weight: 500;
   }
   svg {
     fill: rgb(var(--text-color-sidebar-and-header), 0.5);
@@ -125,12 +135,17 @@
 }
 
 .board_list_container {
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 24px;
+  padding-bottom: 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .side_logout_btn {
+  margin-left: 24px;
   margin-top: 24px;
   cursor: pointer;
   background-color: transparent;
@@ -159,9 +174,9 @@
 }
 
 .side_help {
+  margin-left: 24px;
+  margin-right: 24px;
   max-width: 100%;
-  background-color: rgb(var(--needhelpplatform));
-  border-radius: 8px;
   cursor: pointer;
   position: relative;
 }
@@ -170,15 +185,19 @@
   color: rgb(var(--text-color-sidebar-and-header));
   display: none;
   position: absolute;
-  width: 212px;
+  max-width: 212px;
+  width: 100%;
+  font-size: 14px;
   background-color: rgb(var(--needhelpplatform));
   padding: 10px 20px 20px 20px;
-  border-radius: 8px;
-
-  top: -246px;
+  border-radius: 8px 8px 0 0;
+  top: -211px;
   transition: all 200ms ease-in-out;
   span {
     color: rgb(var(--logonameplatform));
+  }
+  p {
+    width: 172px;
   }
 }
 
@@ -200,7 +219,9 @@
 
 .side_help_text {
   color: rgb(var(--text-color-sidebar-and-header));
+  background-color: rgb(var(--needhelpplatform));
   font-size: 12px;
+  border-radius: 8px;
   font-weight: 500;
   gap: 8px;
   display: flex;
@@ -233,11 +254,62 @@
     width: 100%;
     height: 100vh;
   }
+
+  .board_list {
+    height: 200px;
+  }
 }
 
 @media screen and (max-width: 375px) {
   .side {
     width: 225px;
-    padding: 14px;
+    padding-top: 14px;
+  }
+  .logo_link {
+    margin-left: 14px;
+  }
+  .create_top_container {
+    padding: 0 14px 0 14px;
+  }
+  .under_logo {
+    padding-left: 14px;
+    margin-top: 70px;
+  }
+
+  .board_list_container {
+    padding-left: 14px;
+    padding-right: 14px;
+  }
+  .create_container {
+    gap: 77px;
+  }
+  .side_help {
+    margin-left: 14px;
+    margin-right: 14px;
+  }
+  .side_help_text {
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 14px;
+  }
+  .side_help_span {
+    max-width: 198px;
+    width: 100%;
+    top: -185px;
+    padding: 8px 14px 14px 14px;
+    font-size: 12px;
+    p {
+      width: 168px;
+    }
+  }
+
+  .side_logout_btn {
+    h2 {
+      font-size: 14px;
+    }
+  }
+
+  .board_list {
+    height: 180px;
   }
 }
