--- a/src/components/BoardForm/BoardForm.module.css
+++ b/src/components/BoardForm/BoardForm.module.css
@@ -1,19 +1,19 @@
 .container {
-  max-width: 350px;
-  max-height: 433px;
+  max-width: 335px;
+  height: 433px;
   border-radius: 8px;
   background: #fcfcfc;
-  border: 1px solid #161616;
   padding: 24px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 }
+
 .containerTitle {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 24px;
 }
+
 .title {
   color: #161616;
   margin: 0;
@@ -22,6 +22,7 @@
   font-weight: 500;
   letter-spacing: -0.36px;
 }
+
 .closeButton {
   background: transparent;
   width: 18px;
@@ -35,7 +36,7 @@
 
 .input {
   display: flex;
-  width: 302px;
+  width: 287px;
   padding: 14px 18px;
   align-items: center;
   border-radius: 8px;
@@ -66,13 +67,6 @@
   margin-bottom: 24px;
 }
 
-.iconContainer {
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  margin-bottom: 24px;
-}
-
 h3 {
   color: #161616;
   font-size: 14px;
@@ -82,42 +76,11 @@ h3 {
   margin-bottom: 14px;
 }
 
-.button {
+.iconContainer {
   display: flex;
-  width: 302px;
-  padding: 10px 0px 11px 0px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-  background: #bedbb0;
-  color: #161616;
-  font-weight: 500;
-  letter-spacing: -0.28px;
-  margin-top: 24px;
+  flex-direction: row;
   gap: 8px;
-  outline: none;
-  border: none;
-}
-
-.button:active,
-.button:hover,
-.button:focus {
-  background: #9dc888;
-  transition: opacity 0.3s ease, max-height 0.3s ease;
-}
-
-.iconButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #161616;
-  border-radius: 4px;
-  padding: 7px;
-}
-.button:focus,
-.closeButton:focus {
-  outline: none;
-  box-shadow: none;
+  margin-bottom: 24px;
 }
 
 .backgroundContainer {
@@ -125,7 +88,7 @@ h3 {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 4px;
-  padding-right: 40px;
+  max-width: 262px;
 }
 
 .backgroundImages {
@@ -149,4 +112,57 @@ h3 {
   padding: 6px;
   stroke: #161616;
   stroke-opacity: 0.1;
+}
+
+.button {
+  display: flex;
+  width: 287px;
+  padding: 10px 0px 11px 0px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background: #bedbb0;
+  color: #161616;
+  font-weight: 500;
+  letter-spacing: -0.28px;
+  margin-top: 24px;
+  gap: 8px;
+  outline: none;
+  border: none;
+}
+
+.button:active,
+.button:hover,
+.button:focus {
+  background: #9dc888;
+  transition: opacity 0.3s ease, max-height 0.3s ease;
+}
+
+.button:focus,
+.closeButton:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.iconButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #161616;
+  border-radius: 4px;
+  padding: 7px;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 350px;
+  }
+
+  .input {
+    width: 302px;
+  }
+
+  .button {
+    width: 302px;
+  }
 }
