--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,16 @@ p {
   margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
