--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,7 @@ html[data-theme="light"] {
   --mainboard-scrollbar-track: 255, 255, 255; /* #FFFFFF */
   --button-add-column-text: 22, 22, 22; /* #161616 */
   --icon-plus-add-card: 255, 255, 255; /* #FFFFFF */
+  --radio-button: 22, 22, 22; /* #161616 */
 }
 
 html[data-theme="dark"] {
@@ -125,6 +126,7 @@ html[data-theme="dark"] {
   --mainboard-scrollbar-track: 22, 22, 22; /* #161616 */
   --button-add-column-text: 22, 22, 22; /* #161616 */
   --icon-plus-add-card: 255, 255, 255; /* #FFFFFF */
+  --radio-button: 255, 255, 255, 0.5; /* #FFFFFF */
 }
 
 html[data-theme="violet"] {
@@ -149,6 +151,7 @@ html[data-theme="violet"] {
   --mainboard-scrollbar-track: 255, 255, 255; /* #FFFFFF */
   --button-add-column-text: 255, 255, 255; /* #FFFFFF */
   --icon-plus-add-card: 22, 22, 22; /* #161616 */
+  --radio-button: 22, 22, 22; /* #161616 */
 }
 
 /*
