--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -73,37 +73,48 @@
   position: fixed;
   top: 45px;
   right: 85px;
-  background-color: rgb(var(--background-header));
+  background-color: rgb(var(--background-modal-filters));
   width: 100px;
   height: 107px;
   z-index: 1000;
-  border: 1px solid #bedbb0;
+  border: 1px solid rgb(var(--button-color-modal));
   border-radius: 8px;
   width: 100px;
   height: 107px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-.theme_choise {
+.theme_choice {
   font-weight: 400;
+  display: block;
   font-size: 14px;
   letter-spacing: -0.02em;
-  color: #161616;
+  color: rgb(var(--radio-button));
   cursor: pointer;
+  transition: transform 100ms ease-in-out;
+  input {
+    display: none;
+  }
+}
+
+.theme_choice input[type="radio"]:checked + .theme_text {
+  color: rgb(var(--button-color-modal));
+  transform: scale(1.1);
+}
+
+.theme_choice:hover {
+  transform: scale(1.1);
+}
+
+.modalContent {
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
 .selected {
   color: #bedbb0;
-}
-
-.theme_choise:hover {
-  font-weight: 500;
-  font-size: 15px;
-}
-
-.modalContent {
-  margin-top: 18px;
-  margin-left: 18px;
 }
 
 @media screen and (max-width: 768px) {
