--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -1,70 +1,72 @@
 .form {
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-    max-width: 335px;
-}
-
-.formItem {
-    max-width: 287px;
-    align-items: center;
-    border-radius: 8px;
-    border: 1px solid #BEDBB0;
-    opacity: 0.4;
-    background: #1F1F1F;
-    box-shadow: 0px 4px 16px 0px rgba(22, 22, 22, 0.08);
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  label {
+    position: relative;
+  }
 }
 
 .field {
-    padding: 14px 18px;
-    border: none;
-    border-radius: 8px;
-    background: #1F1F1F;
-    color: #FFF;
-    font-family: Poppins;
-    font-size: 14px;
-    line-height: normal;
-    letter-spacing: -0.02em;
+  position: relative;
+  border: 1px solid rgb(190, 219, 176, 0.3);
+  padding: 14px 18px;
+  width: 100%;
+  border-radius: 8px;
+  background: #1f1f1f;
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Poppins;
+  font-size: 14px;
+  line-height: normal;
+  letter-spacing: -0.02em;
 }
 
 .field::placeholder {
-    color: #FFF;
+  color: rgb(255, 255, 255, 0.3);
+}
+
+.field:focus {
+  border: none;
+  outline: 2px solid rgba(190, 219, 176, 0.705);
 }
 
 .error {
-    color: red;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  color: red;
+  font-size: 13px;
 }
 
 .btn {
-    margin-top: 10px;
-    width: 287px;
-    height: 49px;
-    padding: 14px;
-    border-radius: 8px;
-    border: none;
-    background: #BEDBB0;
-    color: #161616;
-    text-align: center;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: -0.02em;
+  margin-top: 10px;
+  max-width: 287px;
+  width: 100%;
+  height: 49px;
+  padding: 14px;
+  border-radius: 8px;
+  border: none;
+  background: #bedbb0;
+  color: #161616;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.02em;
+  transition: all 200ms ease-in-out;
+}
+
+.btn:hover {
+  transform: scale(1.03);
+  letter-spacing: 0.3px;
 }
 
 /* ===============MEDIA 768============== */
 
 @media screen and (min-width: 768px) {
-    .form {
-        max-width: 424px;
-    }
-
-    .formItem {
-        max-width: 344px;
-    }
-
-    .btn {
-        width: 344px;
-    }
+  .btn {
+    max-width: 344px;
+  }
 }
 
 /* ===============MEDIA 1440============== */
