--- a/src/pages/WelcomePage/WelcomePage.module.css
+++ b/src/pages/WelcomePage/WelcomePage.module.css
@@ -1,146 +1,162 @@
 .welcomePage {
-    width: 100%;
-    height: 100vh;
-    background: rgb(190,219,176);
-    background: linear-gradient(0deg, rgba(190,219,176,1) 10%, rgba(248,251,246,1) 49%, rgba(255,255,255,1) 91%);
+  width: 100%;
+  height: 100vh;
+  background: rgb(190, 219, 176);
+  background: linear-gradient(
+    0deg,
+    rgba(190, 219, 176, 1) 10%,
+    rgba(248, 251, 246, 1) 49%,
+    rgba(255, 255, 255, 1) 91%
+  );
 }
 
 .welcomeContent {
-    max-width: 375px;
-    width: 100%;
-    padding: 0px 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  max-width: 375px;
+  padding: 0 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .taskPro {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 14px;
-    padding-bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+  margin-bottom: 24px;
 }
 
 .welcomeImage {
-    width: 124px;
-    height: 124px;
-    margin-bottom: 14px;
+  width: 124px;
+  height: 124px;
+  margin-bottom: 14px;
 }
 
 .logoContainer {
-    background-color: rgb(var(--background-logo));
-    border-radius: 8px;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: rgb(var(--background-logo));
+  border-radius: 8px;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .svgLogo {
-    fill: rgb(var(--logo));
+  fill: rgb(var(--logo));
 }
 
 .welcomeHeader {
-    color: #161616;
-    font-family: Poppins;
-    font-size: 28px;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: -1.12px;
-    text-align: center;
+  color: #161616;
+  font-family: Poppins;
+  font-size: 28px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -1.12px;
+  text-align: center;
 }
 
 .welcomeText {
-    color: #161616;
-    text-align: center;
-    font-size: 14px;
-    line-height: 1.28em;
-    letter-spacing: -0.01em;
-    padding-bottom: 48px;
+  color: #161616;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.28em;
+  letter-spacing: -0.01em;
+  margin-bottom: 48px;
 }
 
 .welcomeRegBtn {
-    border-radius: 8px;
-    background: #161616;
-    max-width: 335px;
-    width: 100%;
-    padding: 14px 0px;
-    color: #FFF;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: -0.02em;
-    margin-bottom: 14px;
+  border-radius: 8px;
+  background: #161616;
+  max-width: 335px;
+  width: 100%;
+  padding: 14px 0px;
+  color: #fff;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.02em;
+  margin-bottom: 14px;
+  transition: all 200ms ease-in-out;
+}
+
+.welcomeRegBtn:hover {
+  transform: scale(1.03);
+  letter-spacing: 0.3px;
 }
 
 .welcomeLogBtn {
-    text-decoration: none;
-    color: #161616;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: -0.02em;
+  text-decoration: none;
+  color: #161616;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: -0.02em;
+  transition: all 200ms ease-in-out;
+}
+
+.welcomeLogBtn:hover {
+  transform: scale(1.03);
+  letter-spacing: 0.3px;
 }
 
 /* ===============MEDIA 768============== */
 
 @media screen and (min-width: 768px) {
-    .welcomePage {
-        padding: 0px;
-    }
+  .welcomePage {
+    padding: 0px;
+  }
 
-    .welcomeContent {
-        width: 473px;
-    }
+  .welcomeContent {
+    max-width: 513px;
+  }
 
-    .welcomeImage {
-        width: 162px;
-        height: 162px;
-        margin-bottom: 14px;
-    }
+  .welcomeImage {
+    width: 162px;
+    height: 162px;
+    margin-bottom: 24px;
+  }
 
-    .logoContainer {
-        width: 48px;
-        height: 48px;
-    }
+  .logoContainer {
+    width: 48px;
+    height: 48px;
+  }
 
-    .svgLogo {
-        fill: rgb(var(--logo));
-        width: 24px;
-        height: 28px;
-    }
+  .svgLogo {
+    fill: rgb(var(--logo));
+    width: 24px;
+    height: 28px;
+  }
 
-    .welcomeHeader {
-        font-size: 40px;
-        letter-spacing: -0.04em;
-    }
+  .welcomeHeader {
+    font-size: 40px;
+    letter-spacing: -0.04em;
+  }
 
-    .welcomeText {
-        letter-spacing: -0.02em;
-    }
-    
-    .welcomeRegBtn {
-        width: 344px;
-    }
-    
+  .welcomeText {
+    letter-spacing: -0.02em;
+  }
+
+  .welcomeRegBtn {
+    width: 344px;
+  }
 }
 
 /* ===============MEDIA 1440============== */
 
 @media screen and (min-width: 1440px) {
-    .welcomeImage {
-        margin-bottom: 24px;
-    }
+  .welcomeImage {
+    margin-bottom: 24px;
+  }
 
-    .welcomeHeader {
-        font-size: 40px;
-    }
+  .welcomeHeader {
+    font-size: 40px;
+  }
 }
