--- a/src/components/MainBoardForm/MainBoardForm.module.css
+++ b/src/components/MainBoardForm/MainBoardForm.module.css
@@ -15,7 +15,7 @@
 }
 
 .title {
-  color: rgb(var(--text-color-sidebar-and-header));
+  color: rgb(var(--text-color-mainboard));
   margin: 0;
   padding: 0;
   font-size: 18px;
@@ -32,6 +32,7 @@
   padding: 0;
   outline: none;
   border: none;
+  stroke: (var(--button-color-mainboard));
 }
 
 .input {
@@ -42,7 +43,7 @@
   border-radius: 8px;
   border: 1px solid rgb(var(--button-color-modal));
   box-shadow: 0px 4px 16px 0px rgba(22, 22, 22, 0.08);
-  color: rgb(var(--text-color-sidebar-and-header));
+  color: rgb(var(--text-color-mainboard));
   font-size: 14px;
   letter-spacing: -0.28px;
   background: transparent;
@@ -69,7 +70,7 @@
 }
 
 h3 {
-  color: rgb(var(--text-color-sidebar-and-header));
+  color: rgb(var(--text-color-mainboard));
   font-size: 14px;
   font-weight: 500;
   letter-spacing: -0.28px;
@@ -135,7 +136,7 @@ h3 {
 .button:active,
 .button:hover,
 .button:focus {
-  background: #9dc888;
+  background: rgb(var(--icon-plus-add-card));
   transition: opacity 0.3s ease, max-height 0.3s ease;
 }
 
@@ -150,7 +151,7 @@ h3 {
   justify-content: center;
   align-items: center;
   background-color: rgb(var(--button-add-column-text));
-  stroke: white;
+  stroke: rgb(var(--icon-plus-add-card));
   border-radius: 4px;
   padding: 7px;
 }
