--- a/src/components/MainBoard/Filters/Filters.module.css
+++ b/src/components/MainBoard/Filters/Filters.module.css
@@ -176,7 +176,7 @@
   box-shadow: 0px 0px 0px 2px currentColor;
 }
 
-@media (min-width: 375px) {
+@media screen and (min-width: 375px) {
   .filtersModal{
     right: 24px;
     top: 108px;
