--- a/src/components/MainBoard/ScreensPage/ScreensPage.module.css
+++ b/src/components/MainBoard/ScreensPage/ScreensPage.module.css
@@ -23,21 +23,21 @@
 }
 
 .mainWrapper {
-width:100%;
-  height: 100%;
+  width:100%;
+  height: calc(100% - 60px);
   flex: 1;
   display: flex;
-  padding: 0 20px  36px 20px;
-  overflow: auto;
+  padding: 0 20px  24px 20px;
   position: relative;
 }
 
 .scrollbarColumn{
+  flex: 1;
   width: 100%;
+  height: 100%;
   flex-shrink: 0;
     overflow-x: scroll;
     padding-bottom: 10px;
-    height: calc(100% + 12px);
     margin-bottom: -10px;
 }
 
@@ -136,6 +136,10 @@ width:100%;
 }
 
 @media screen and (min-width: 376px) {
+  .mainWrapper {
+      padding: 0 32px 32px 32px;
+    }
+
   .button {
     max-width: 334px;
   }
@@ -152,6 +156,11 @@ width:100%;
     width: calc(100vw - 260px);
       height: calc(100vh - 68px);
     }
+
+        .mainWrapper {
+          padding: 0 24px 8px 24px;
+        }
+
   .button {
     width: 334px;
   }
