--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -356,3 +356,8 @@
   border-radius: 8px;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
 }
+
+.iconButton {
+  background: transparent;
+  border: none;
+}
