--- a/src/components/BackgroundRadioButton/BackgroundRadioButton.module.css
+++ b/src/components/BackgroundRadioButton/BackgroundRadioButton.module.css
@@ -7,7 +7,9 @@
 }
 
 .activeBackground {
-  border: 1px solid rgb(var(--button-color-modal));
+  border: 2px solid rgb(var(--button-color-modal));
+  width: 32px;
+  height: 32px;
 }
 
 .iconBackground {
