--- a/src/components/EditUserProfile/EditUserProfile.module.css
+++ b/src/components/EditUserProfile/EditUserProfile.module.css
@@ -169,7 +169,9 @@
   &:hover,
   &:focus {
     background: #9dc888;
-    transition: opacity 0.3s ease, max-height 0.3s ease;
+    transition:
+      opacity 0.3s ease,
+      max-height 0.3s ease;
   }
 }
 
