--- a/src/components/MainBoardForm/MainBoardForm.module.css
+++ b/src/components/MainBoardForm/MainBoardForm.module.css
@@ -64,9 +64,7 @@
   font-size: 12px;
   margin-top: 1px;
   padding: 0 18px;
-  transition:
-    opacity 0.3s ease,
-    max-height 0.3s ease;
+  transition: opacity 0.3s ease, max-height 0.3s ease;
 }
 
 .containerError {
@@ -128,9 +126,6 @@ h3 {
 .button:hover,
 .button:focus {
   background: rgb(var(--button-background-color));
-  transition:
-    opacity 0.3s ease,
-    max-height 0.3s ease;
 }
 
 .button:focus,
@@ -140,7 +135,8 @@ h3 {
 }
 
 .button:hover {
-  transform: rotate(90%);
+  transform: scale(1.04);
+  letter-spacing: 0.6px;
 }
 
 .iconButton {
