--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -173,6 +173,15 @@
   fill: transparent;
 }
 
+.side_helpBtn {
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+}
+
 .side_help {
   margin-left: 24px;
   margin-right: 24px;
