--- a/src/components/ModalCard/ModalCard.module.css
+++ b/src/components/ModalCard/ModalCard.module.css
@@ -5,14 +5,14 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.75);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .content {
-  background-color: rgb(var(--background-mainboard));
+  background-color: rgb(var(--background-modal-filters));
   padding: 24px;
   border-radius: 8px;
   width: 335px;
@@ -95,13 +95,20 @@ span {
   align-items: center;
   justify-content: center;
   width: 100%;
-  background-color: #c8e6c9;
-  color: black;
+  background-color: rgb(var(--button-color-modal));
+  color: #161616;
   border: none;
   border-radius: 8px;
   padding: 12px 0;
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: 500;
   margin-top: 24px;
+  &:active,
+  &:hover,
+  &:focus {
+    background: rgb(var(--button-background-color));
+    transition: opacity 0.3s ease, max-height 0.3s ease;
+  }
 }
 
 .svgWrapper {
@@ -127,40 +134,22 @@ span {
   width: 100%;
 }
 
-.react-datepicker__input-container input {
-  position: relative;
-  width: 100%;
-  padding: 0;
-  cursor: pointer;
-  letter-spacing: -0.28px;
-  color: var(--primary-modal-card-color);
-  border: none;
-  outline: none;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-position: top 6px right 65px;
-  font-family: "Poppins", sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.5;
-}
-
 .react-datepicker__triangle {
   display: none;
 }
 
-.react-datepicker {
-  border: 1px solid 16 #bedbb0;
+.datePickerWrapper :global(.react-datepicker__month-container) {
+  border: 1px solid rgb(var(--button-color-modal));
   border-radius: 6px;
   background-color: #fff;
   font-family: "Poppins", sans-serif;
 }
 
-.react-datepicker__header {
+.datePickerWrapper :global(.react-datepicker__header) {
   background-color: #fff;
 }
 
-.react-datepicker__current-month {
+.datePickerWrapper :global(.react-datepicker__current-month) {
   letter-spacing: -0.32px;
   color: #161616;
   font-family: "Poppins", sans-serif;
@@ -168,18 +157,18 @@ span {
   line-height: 1.5;
 }
 
-.react-datepicker__navigation-icon--next {
-  background-color: #bedbb0;
+.datePickerWrapper :global(.react-datepicker__navigation-icon--next) {
+  background-color: rgb(var(--button-color-modal));
 }
 
-.react-datepicker__day-name {
+.datePickerWrapper :global(.react-datepicker__day-name) {
   color: hsla(0, 0%, 9%, 0.5);
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 500;
 }
 
-.react-datepicker__day {
+.datePickerWrapper :global(.react-datepicker__day) {
   transition: background-color 250ms ease-in, color 250ms ease-in;
   color: #161616;
   border-radius: 50%;
@@ -189,22 +178,22 @@ span {
   font-weight: 400;
 }
 
-.react-datepicker__day--selected {
+.datePickerWrapper :global(.react-datepicker__day--selected) {
   color: #fff;
-  background-color: #bedbb0;
+  background-color: rgb(var(--button-color-modal));
   border-radius: 50%;
 }
 
-.react-datepicker__day--disabled {
+.datePickerWrapper :global(.react-datepicker__day--disabled) {
   color: hsla(0, 0%, 9%, 0.2);
 }
 
-.react-datepicker__day:hover {
+.datePickerWrapper :global(.react-datepicker__day:hover) {
   color: #fff;
-  background-color: #bedbb0;
+  background-color: rgb(var(--button-color-modal));
 }
 
-.react-datepicker__day--disabled:hover {
+.datePickerWrapper :global(.react-datepicker__day--disabled:hover) {
   color: hsla(0, 0%, 9%, 0.2);
   background-color: transparent;
 }
@@ -216,7 +205,7 @@ span {
 }
 .spanStyled {
   letter-spacing: -0.28px;
-  color: #bedbb0;
+  color: rgb(var(--button-background-color));
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 500;
@@ -227,8 +216,7 @@ span {
   width: 100%;
   padding: 0px;
   cursor: pointer;
-  letter-spacing: -0.28px;
-  color: #bedbb0;
+  color: rgb(var(--button-background-color));
   border: none;
   outline: none;
   background-color: transparent;
